Fixed the overlaping and remove vedio for now also removed absolute property from the css

--- a/src/Header.css
+++ b/src/Header.css
@@ -6,14 +6,12 @@
 }
 
 header{
-  position: relative;
-  z-index: 1;
-
   display: flex;
   align-items: center;
   justify-content: flex-start;
   width: 100%;
   gap: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 
 }
 
@@ -74,6 +72,7 @@ color: #FFFFFF;
 .bgcontainer {
   width: 100vh;
   height: 100vh;
+  position: absolute;
 }
 
 video {
@@ -81,7 +80,7 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -15;
+  z-index: -1;
   border-radius: 0 0 70% 70% / 8%;
 }
 
@@ -91,10 +90,21 @@ video {
 
 .backgroundOverlay {
   background-color: #1F201E91;
-    height: 100%;
+
     width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     position: absolute;
+   
 
+}
+
+.firstPage {
+
+  background-color: #1F201E91;
+}
+
+.about {
+ 
 }
