--- a/src/Intro.css
+++ b/src/Intro.css
@@ -9,7 +9,7 @@
 }
 
 .introDiv {
-position: absolute;
+
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,6 @@ position: absolute;
     margin: 55px 10px 0 10px;
     text-align: center;
     gap: 15px;
-
 }
 
 
@@ -73,3 +72,10 @@ position: absolute;
     font-weight: 400;
 }
 
+.bottomCurve {
+    width: 100%;
+    height: 40px;
+    background-color: #FFFFFF;
+    border-radius: 0 0 70% 70% / 60%;
+    margin-top: 100px;
+}
